--- a/styles.css
+++ b/styles.css
@@ -175,13 +175,13 @@ footer {
     }
 
     .navbar-header > .navbar-brand {
-        color: rgba(255,255,255,0.7);
+        color: #000;
         padding: 19px;
     }
 
     .navbar-default .navbar-header .navbar-brand:hover,
     .navbar-default .navbar-header .navbar-brand:focus {
-        color: #f4f4f4;
+        color: #000;
     }
 
     .navbar-default .nav > li>a,
