--- a/styles.css
+++ b/styles.css
@@ -233,7 +233,7 @@ header {
     color: #fff;
     width: 100%;
     background-color: #c9c9c9;
-    background-image: url('yarn.jpg');
+    background-image: url('brain.jpg');
     background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
