--- a/styles.css
+++ b/styles.css
@@ -415,6 +415,7 @@ textarea {
 .gallery-box img {
     -webkit-transition: all 300ms ease-in-out;
     transition: all 300ms ease-in-out;
+    height: 300px;
 }
 
 .no-gutter > [class*=col-] {
