--- a/styles.css
+++ b/styles.css
@@ -410,6 +410,8 @@ textarea {
     -webkit-transform: scale(1.1);
     -ms-transform: scale(1.1);
     transform: scale(1.1);
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .gallery-box img {
