--- a/styles.css
+++ b/styles.css
@@ -418,6 +418,8 @@ textarea {
     -webkit-transition: all 300ms ease-in-out;
     transition: all 300ms ease-in-out;
     height: 300px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .no-gutter > [class*=col-] {
