--- a/styles.css
+++ b/styles.css
@@ -400,6 +400,8 @@ textarea {
     width: 100%;
     text-align: center;
     transform: translateY(-50%);
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .gallery-box:hover .gallery-box-caption {
